<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeFragment"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunabee_studio_quizz"
        android:textSize="24sp"
        android:layout_margin="24dp"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quel_est_votre_nom"
        android:textSize="20sp"
        android:layout_margin="24dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        android:textSize="14sp"
        android:hint="@string/entrez_votre_nom"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingHorizontal="24dp"
        android:textSize="14sp"
        android:text="@string/jouons"
        android:layout_below="@+id/usernameEditText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/la_simplicit_est_la_marque_de_la_v_ritable_intelligence"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>
